--- a/languages/pl_PL.po
+++ b/languages/pl_PL.po
@@ -1,125 +1,142 @@
 # Copyright (C) 2020 Automattic
 # This file is distributed under the GNU General Public License v2 or later.
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: _s 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/_s\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2020-10-21 12:33+0200\n"
+"PO-Revision-Date: 2020-10-21 12:47+0200\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-10-21 12:33+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: Poedit 2.0.6\n"
 "X-Domain: _s\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
 
 #: 404.php:18
 msgid "Oops! That page can&rsquo;t be found."
-msgstr ""
+msgstr "Ups! Strona nie istnieje."
 
 #: 404.php:22
-msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
+msgid ""
+"It looks like nothing was found at this location. Maybe try one of the links "
+"below or a search?"
 msgstr ""
+"Wygląda na to, że nic nie znaleziono w tej lokalizacji. Może wypróbuj jeden "
+"z poniższych linków lub wyszukaj?"
 
 #. translators: 1: title.
 #: comments.php:35
 msgid "One thought on &ldquo;%1$s&rdquo;"
-msgstr ""
+msgstr "Jedna myśl na &ldquo;%1$s&rdquo;"
 
 #. translators: 1: comment count number, 2: title.
 #: comments.php:41
 msgctxt "comments title"
 msgid "%1$s thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Jedna myśl na &ldquo;%1$s&rdquo;"
+msgstr[1] "%1$s myśli na &ldquo;%2$s&rdquo;"
+msgstr[2] "%1$s myśli na &ldquo;%2$s&rdquo;"
 
 #: comments.php:68
 msgid "Comments are closed."
-msgstr ""
+msgstr "Komentarze niedostępne."
 
 #: functions.php:53
 msgid "Primary"
-msgstr ""
+msgstr "Głowna"
 
 #: functions.php:130
 msgid "Sidebar"
-msgstr ""
+msgstr "Sidebar"
 
 #: functions.php:132
 msgid "Add widgets here."
-msgstr ""
+msgstr "Dodaj widgety tutaj."
 
 #: header.php:26
 msgid "Skip to content"
-msgstr ""
+msgstr "Przewiń do treści"
 
 #: header.php:49
 msgid "Primary Menu"
-msgstr ""
+msgstr "Głowne Menu"
 
 #. translators: used between list items, there is a space after the comma
 #: inc/template-tags.php:63
 msgid ", "
-msgstr ""
+msgstr ", "
 
 #. translators: used between list items, there is a space after the comma
 #: inc/template-tags.php:70
 msgctxt "list item separator"
 msgid ", "
-msgstr ""
+msgstr ", "
 
 #. translators: %s: Name of current post. Only visible to screen readers
 #: inc/template-tags.php:100 template-parts/content-page.php:39
 msgid "Edit <span class=\"screen-reader-text\">%s</span>"
-msgstr ""
+msgstr "Edytuj <span class=\"screen-reader-text\">%s</span>"
 
 #. translators: %s: search query.
 #: search.php:22
 msgid "Search Results for: %s"
-msgstr ""
+msgstr "Wyniki wyszukiwania dla: %s"
 
 #: single.php:23
 msgid "Previous:"
-msgstr ""
+msgstr "Poprzedni:"
 
 #: single.php:24
 msgid "Next:"
-msgstr ""
+msgstr "Następny:"
 
 #: template-parts/content-none.php:14
 msgid "Nothing Found"
-msgstr ""
+msgstr "Nic nie znaleziono"
 
 #. translators: 1: link to WP admin new post page.
 #: template-parts/content-none.php:24
-msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgid ""
+"Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
 msgstr ""
+"Gotowy do opublikowania pierwszego posta? <a href=\"%1$s\">Rozpocznij</a>."
 
 #: template-parts/content-none.php:37
-msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
+msgid ""
+"Sorry, but nothing matched your search terms. Please try again with some "
+"different keywords."
 msgstr ""
+"Przepraszamy, ale nic nie pasuje do wyszukiwanych haseł. Spróbuj ponownie, "
+"używając innych słów kluczowych."
 
 #: template-parts/content-none.php:44
-msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
+msgid ""
+"It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps "
+"searching can help."
 msgstr ""
+"Wygląda na to, że nie możemy znaleźć tego, czego szukasz. Być może "
+"wyszukiwanie pomoże."
 
 #: template-parts/content-page.php:25 template-parts/content.php:53
 msgid "Pages:"
-msgstr ""
+msgstr "Strony:"
 
 #. translators: %s: Name of current post. Only visible to screen readers
 #: template-parts/content.php:40
 msgid "Continue reading<span class=\"screen-reader-text\"> \"%s\"</span>"
-msgstr ""
+msgstr "Kontynuuj czytanie<span class=\"screen-reader-text\"> \"%s\"</span>"
 
 msgid "Translation"
-msgstr ""
+msgstr "Tłumaczenie"
 
 msgid "Original Author:"
-msgstr ""
+msgstr "Autor oryginału:"
 
 msgid "Book Critique"
-msgstr ""
+msgstr "Recenzja książki"
